--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@bitgo/abstract-eth": "^1.6.0",
+    "@bitgo/sdk-coin-eth": "^4.10.0",
     "@bitgo/sdk-core": "^8.26.0",
-    "ethereumjs-util": "^7.1.5"
+    "@ethersproject/keccak256": "^5.7.0",
+    "bitgo": "^19.20.0",
+    "ethereumjs-util": "^7.1.5",
+    "ethers": "^5.7.2"
+  },
+  "devDependencies": {
+    "@types/keccak": "^3.0.4"
   }
 }
